store/src/styles/components/helper_bar.scss
.hern-helper-bar {
   padding: 0 2.25rem;
   height: auto;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-radius: 0.5rem;
   -webkit-border-radius: 0.5rem;
   -moz-border-radius: 0.5rem;
   -ms-border-radius: 0.5rem;
   -o-border-radius: 0.5rem;
   margin-bottom: 1.688rem;
}
.hern-helper-bar--info {
   @extend .hern-helper-bar;
   background-color: rgba(199, 210, 254, 1);
   color: rgba(55, 48, 163, 1);
   button {
      border-width: 1px;
      border-color: rgba(55, 48, 163, 1);
   }
   button:hover {
      background-color: rgba(165, 180, 252, 1);
   }
}

.hern-helper-bar--success {
   @extend .hern-helper-bar;
   background-color: rgba(17, 130, 59, 0.1);

   button {
      border-width: 1px;
      border-color: rgba(6, 95, 70, 1);
   }
   button:hover {
      border-color: rgba(110, 231, 183, 1);
   }
}
.hern-helper-bar--danger {
   background-color: rgba(254, 202, 202, 1);
   color: rgba(153, 27, 27, 1);
   @extend .hern-helper-bar;
   button {
      border-width: 1px;
      border-color: rgba(153, 27, 27, 1);
   }
   button:hover {
      background-color: rgba(252, 165, 165, 1);
   }
}
.hern-helper-bar--warning {
   @extend .hern-helper-bar;
   background-color: rgba(253, 230, 138, 1);
   color: rgba(146, 64, 14, 1);
   button {
      border-width: 1px;
      border-color: rgba(146, 64, 14, 1);
   }
   button:hover {
      background-color: rgba(252, 211, 77, 1);
   }
}
.hern-helper-bar__btn {
   color: #ffffff;
   font-family: 'Lato';
   font-style: normal;
   font-weight: 500;
   margin-top: 0.25rem;
   padding: 0.625em 6.25em;
   border-radius: 0.375rem;
   font-size: 1.25rem;
   line-height: 1.25rem;
   background-color: var(--hern-accent);

   &:hover {
      background-color: rgba(17, 130, 59, 0.8);
   }
}
.hern-helper-bar__title {
   text-align: center;
   font-size: 1.125rem;
   line-height: 1.75rem;
}
.hern-helper-bar__subtitle {
   margin: 0 25px;
   & > span {
      color: #11823b;
      display: block;
      font-family: 'Lato';
      font-style: normal;
      font-weight: 700;
      font-size: 32px;
      margin-bottom: 4px;
   }
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   color: #333333;
}

@media (max-width: 1024px) {
   .hern-helper-bar {
      padding: 0 13px;
   }
   .hern-helper-bar__subtitle {
      & > span {
         font-size: 25px;
      }

      font-size: 15px;
      text-align: center;
   }
}

@media (max-width: 768px) {
   .hern-helper-bar__subtitle {
      & > span {
         font-size: 18px;
      }

      font-size: 12px;
   }
   .hern-helper-bar__btn {
      font-size: 1rem;
   }
}

